--- a/index.html
+++ b/index.html
@@ -43,79 +43,79 @@
         
         <div class="arrow header bottom"></div>
         <div class="section_main" id="About">
-            <div class="section_backgroud ccg"></div>
-            <img class="section_movingImage" id="left_ccg" src="images/VW_paint.png">
-            <img class="section_movingImage"  id="right_ccg" src="images/VW_shapes.png">
+            <div class="section_backgroud About"></div>
+            <img class="section_movingImage" id="left_About" src="images/VW_paint.png">
+            <img class="section_movingImage"  id="right_About" src="images/VW_shapes.png">
             <h2 class="section title">About Me</h2>
             <div class="section_tags">
                 <p class="section_tag gray">Tag 1</p>
                 <p class="section_tag blue">Tag 2</p>
             </div>
             <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_ccg" class="section desc">
+            <p id="section_desc_About" class="section desc">
                 Put some info about me here<br/>
                 blah blah blah<br/>
                 blah blah blah<br/>
             </p>
             <a class="section next" href="#pcSpecs">NEXT</a>
-            <div class="arrow section ccg"></div>
+            <div class="arrow section About"></div>
         </div>
 
         <div class="section_main" id="pcSpecs">
-            <div class="section_backgroud terminalEngine"></div>
-            <img class="section_movingImage" id="left_terminalEngine" src="images/VW_planets.png">
-            <img class="section_movingImage"  id="right_terminalEngine" src="images/VW_Saturn.png">
+            <div class="section_backgroud pcSpecs"></div>
+            <img class="section_movingImage" id="left_pcSpecs" src="images/VW_planets.png">
+            <img class="section_movingImage"  id="right_pcSpecs" src="images/VW_Saturn.png">
             <h2 class="section title">PC Specs</h2>
             <div class="section_tags">
                 <p class="section_tag green">Tag 1</p>
                 <p class="section_tag gray2">Tag 2</p>
             </div>
             <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_terminalEngine" class="section desc">
+            <p id="section_desc_pcSpecs" class="section desc">
                 PC Specs here<br/>
                 blah blah blah<br/>
                 blah blah blah<br/>
             </p>
             <a class="section next" href="#something1">NEXT</a>
-            <div class="arrow section terminalEngine"></div>
+            <div class="arrow section pcSpecs"></div>
         </div>
 
         <div class="section_main" id="something1">
-            <div class="section_backgroud simpleml"></div>
-            <img class="section_movingImage" id="left_simpleml" src="images/VS_purpleSaturn.png">
-            <img class="section_movingImage"  id="right_simpleml" src="images/VW_planets.png">
+            <div class="section_backgroud something1"></div>
+            <img class="section_movingImage" id="left_something1" src="images/VS_purpleSaturn.png">
+            <img class="section_movingImage"  id="right_something1" src="images/VW_planets.png">
             <h2 class="section title">Something else</h2>
             <div class="section_tags">
                 <p class="section_tag pink">Tag 1</p>
                 <p class="section_tag red">Tag 2</p>
             </div>
             <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_simpleml" class="section desc">
+            <p id="section_desc_something1" class="section desc">
                 Idk what's going here yet<br/>
                 blah blah blah<br/>
                 blah blah blah<br/>
             </p>
             <a class="section next" href="#something2">NEXT</a>
-            <div class="arrow section simpleml"></div>
+            <div class="arrow section something1"></div>
         </div>
 
         <div class="section_main" id="something2">
-            <div class="section_backgroud ofp"></div>
-            <img class="section_movingImage" id="left_ofp" src="images/VW_crystals.png">
-            <img class="section_movingImage"  id="right_ofp" src="images/VW_hearts.png">
+            <div class="section_backgroud something2"></div>
+            <img class="section_movingImage" id="left_something2" src="images/VW_crystals.png">
+            <img class="section_movingImage"  id="right_something2" src="images/VW_hearts.png">
             <h2 class="section title">Object Finder Prototype</h2>
             <div class="section_tags">
                 <p class="section_tag pink">Tag 1</p>
                 <p class="section_tag red">Tag 2</p>
             </div>
             <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_ofp" class="section desc">
+            <p id="section_desc_something2" class="section desc">
                 Idk what's going here yet<br/>
                 blah blah blah<br/>
                 blah blah blah<br/>
             </p>
             <a class="section next" href="#main">TOP</a>
-            <div class="arrow section ofp"></div>
+            <div class="arrow section something2"></div>
         </div>
 
         <footer>
