--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div id="header_images">
                 <a href="#About">
                     <p class="header_images_title">About me</p>
-                    <img src="images/cat_1.jpg">
+                    <img src="images/Me.jpg">
                 </a>
                 <a href="#pcSpecs">
                     <p class="header_images_title">PC Specs</p>
-                    <img src="images/cat_1.jpg">
+                    <img src="images/pc.png">
                 </a>
                 <a href="#something1">
                     <p class="header_images_title">Something else</p>
@@ -46,10 +46,6 @@
             <img class="section_movingImage" id="left_About" src="images/VW_paint.png">
             <img class="section_movingImage"  id="right_About" src="images/VW_shapes.png">
             <h2 class="section title">About Me</h2>
-            <div class="section_tags">
-                <p class="section_tag gray">Tag 1</p>
-                <p class="section_tag blue">Tag 2</p>
-            </div>
             <img class="section image" src="images/cat_1.jpg">
             <p id="section_desc_About" class="section desc">
                 Put some info about me here<br/>
@@ -65,15 +61,26 @@
             <img class="section_movingImage" id="left_pcSpecs" src="images/VW_planets.png">
             <img class="section_movingImage"  id="right_pcSpecs" src="images/VW_Saturn.png">
             <h2 class="section title">PC Specs</h2>
-            <div class="section_tags">
-                <p class="section_tag green">Tag 1</p>
-                <p class="section_tag gray2">Tag 2</p>
-            </div>
-            <img class="section image" src="images/cat_1.jpg">
             <p id="section_desc_pcSpecs" class="section desc">
-                PC Specs here<br/>
-                blah blah blah<br/>
-                blah blah blah<br/>
+                <b>System:</b>
+                <br/><b>» Motherboard:</b> MSI MPG Z490 GAMING PLUS ATX
+                <br/><b>» CPU:</b> Core i9-10900k
+                <br/><b>» GPU:</b> Nvidia RTX 3090 FE
+                <br/><b>» RAM:</b> Corsair Vengeance LPX 64GB 3200Mhz
+                <br/><b>» Storage:</b> Corsair MP400 1TB M.2 & 5TB of random old drives
+                <br/><b>» PSU:</b> Corsair RM1000i
+                <br/><br/>
+
+                <b>VR:</b>
+                <br/><b>» HMD:</b> Valve Index
+                <br/><b>» Controllers:</b> Valve Index Knuckles
+                <br/><b>» FBT:</b> 3x Vive trackers
+                <br/><br/>
+
+                <b>Other:</b>
+                <br/><b>» Keyboard:</b> Corsair K95 RGB Platinum
+                <br/><b>» Mouse:</b> Razer Deathadder V2
+                <br/><b>» Audio:</b> Razer Kraken
             </p>
             <a class="section next" href="#something1">NEXT</a>
             <div class="arrow section pcSpecs"></div>
@@ -102,7 +109,7 @@
             <div class="section_backgroud something2"></div>
             <img class="section_movingImage" id="left_something2" src="images/VW_crystals.png">
             <img class="section_movingImage"  id="right_something2" src="images/VW_hearts.png">
-            <h2 class="section title">Object Finder Prototype</h2>
+            <h2 class="section title">Something else 2</h2>
             <div class="section_tags">
                 <p class="section_tag pink">Tag 1</p>
                 <p class="section_tag red">Tag 2</p>
