--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
                     <p class="header_images_title">PC Specs</p>
                     <img src="images/pc.png">
                 </a>
-                <a href="#something1">
-                    <p class="header_images_title">Something else</p>
-                    <img src="images/cat_1.jpg">
-                </a>
-                <a href="#something2">
-                    <p class="header_images_title">Idk yet</p>
-                    <img src="images/cat_1.jpg">
+                <a href="#bdImage">
+                    <p class="header_images_title"><3</p>
+                    <img src="images/heart.png">
                 </a>
             </div>
             
@@ -46,11 +42,14 @@
             <img class="section_movingImage" id="left_About" src="images/VW_paint.png">
             <img class="section_movingImage"  id="right_About" src="images/VW_shapes.png">
             <h2 class="section title">About Me</h2>
-            <img class="section image" src="images/cat_1.jpg">
+            <img class="section image" src="images/HL.png">
+            <p class="section imgSubheading">(I'm the tiny one)</p>
             <p id="section_desc_About" class="section desc">
-                Put some info about me here<br/>
-                blah blah blah<br/>
-                blah blah blah<br/>
+                Hi, my name is Alissa and I'm a very shy 21 year old girl 🏳️‍⚧️ from the UK. :3<br/><br/>
+                Currently studying Game/Game engine development.<br/><br/>
+                I spend most of my time procrastinating, scrolling reddit, watching Netflix, or chilling in VRChat.<br/><br/>
+                I've got 7 cats so pretty much a crazy cat lady.<br/><br/>
+                I adore cuddles!! :D
             </p>
             <a class="section next" href="#pcSpecs">NEXT</a>
             <div class="arrow section About"></div>
@@ -82,67 +81,39 @@
                 <br/><b>» Mouse:</b> Razer Deathadder V2
                 <br/><b>» Audio:</b> Razer Kraken
             </p>
-            <a class="section next" href="#something1">NEXT</a>
+            <a class="section next" href="#bdImage">NEXT</a>
             <div class="arrow section pcSpecs"></div>
         </div>
 
-        <div class="section_main" id="something1">
-            <div class="section_backgroud something1"></div>
-            <img class="section_movingImage" id="left_something1" src="images/VS_purpleSaturn.png">
-            <img class="section_movingImage"  id="right_something1" src="images/VW_planets.png">
-            <h2 class="section title">Something else</h2>
+        <div class="section_main" id="bdImage">
+            <div class="section_backgroud bdImage"></div>
+            <img class="section_movingImage" id="left_bdImage" src="images/VS_purpleSaturn.png">
+            <img class="section_movingImage"  id="right_bdImage" src="images/VW_hearts.png">
+            <h2 class="section title"><3</h2>
             <div class="section_tags">
-                <p class="section_tag pink">Tag 1</p>
-                <p class="section_tag red">Tag 2</p>
+                <p class="section_tag pink">Cutie</p>
             </div>
-            <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_something1" class="section desc">
-                Idk what's going here yet<br/>
-                blah blah blah<br/>
-                blah blah blah<br/>
-            </p>
-            <a class="section next" href="#something2">NEXT</a>
-            <div class="arrow section something1"></div>
-        </div>
-
-        <div class="section_main" id="something2">
-            <div class="section_backgroud something2"></div>
-            <img class="section_movingImage" id="left_something2" src="images/VW_crystals.png">
-            <img class="section_movingImage"  id="right_something2" src="images/VW_hearts.png">
-            <h2 class="section title">Something else 2</h2>
-            <div class="section_tags">
-                <p class="section_tag pink">Tag 1</p>
-                <p class="section_tag red">Tag 2</p>
-            </div>
-            <img class="section image" src="images/cat_1.jpg">
-            <p id="section_desc_something2" class="section desc">
-                Idk what's going here yet<br/>
-                blah blah blah<br/>
-                blah blah blah<br/>
+            <img class="section bdayimage " src="images/alissaBirthday.jpg">
+            <p id="section_desc_bdImage" class="section desc">
+                An incredible drawing my friend Emily made for my birthday <3
             </p>
             <a class="section next" href="#main">TOP</a>
-            <div class="arrow section something2"></div>
+            <div class="arrow section bdImage"></div>
         </div>
 
         <footer>
             <ul class="footer_list">
-                <li class="footer_list title"><h1>Social</h1></li>
-                <li class="footer_list element"><a href="#">Social 1</a></li>
-                <li class="footer_list element"><a href="#">Social 2</a></li>
-                <li class="footer_list element"><a href="#">Social 3</a></li>
+                <li class="footer_list title"><h1>Cool links</h1></li>
+                <li class="footer_list element"><a href="https://turnmeintoagirl.com/" target="_blank">instant_euphoria.exe</a></li>
             </ul>
 
             <ul class="footer_list">
-                <li class="footer_list title"><h1>Something else</h1></li>
-                <li class="footer_list element"><a href="#">idk 1</a></li>
-                <li class="footer_list element"><a href="#">idk 2</a></li>
-                <li class="footer_list element"><a href="#">idk 3</a></li>
+                <li class="footer_list title"><h1>Other links</h1></li>
+                <li class="footer_list element"><a href="https://genderdysphoria.fyi/gdb/" target="_blank">Gender Dysphoria</a></li>
             </ul>
         </footer>
 
     </div>
-    
-    <!--<a href="#main"><div id="top_button"></div></a>-->
 
 </body>
 </html>
