--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
         <div class="section_main" id="pcSpecs">
             <div class="section_backgroud pcSpecs"></div>
-            <img class="section_movingImage" id="left_pcSpecs" src="images/VW_planets.png">
-            <img class="section_movingImage"  id="right_pcSpecs" src="images/VW_Saturn.png">
+            <img class="section_movingImage" id="left_pcSpecs" src="images/VW_Saturn.png">
+            <img class="section_movingImage"  id="right_pcSpecs" src="images/VW_planets.png">
             <h2 class="section title">PC Specs</h2>
             <p id="section_desc_pcSpecs" class="section desc">
                 <b>System:</b>
