Removed Outdated images & Updated new ones
New third section
New image in first section
Updated Me image

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <div id="header_images">
                 <a href="#About">
                     <p class="header_images_title">About me</p>
-                    <img src="images/Me.jpg">
+                    <img src="images/pfp.jpg">
                 </a>
                 <a href="#pcSpecs">
                     <p class="header_images_title">PC Specs</p>
                     <img src="images/pc.png">
                 </a>
-                <a href="#bdImage">
+                <a href="#Please">
                     <p class="header_images_title"><3</p>
                     <img src="images/heart.png">
                 </a>
@@ -42,8 +42,8 @@
             <img class="section_movingImage" id="left_About" src="images/VW_paint.png">
             <img class="section_movingImage"  id="right_About" src="images/VW_shapes.png">
             <h2 class="section title">About Me</h2>
-            <img class="section image" src="images/HL.png">
-            <p class="section imgSubheading">(I'm the tiny one)</p>
+            <img class="section image" src="images/Arrow.png">
+            <p class="section imgSubheading">:hypoV::hypoV::hypoV:</p>
             <p id="section_desc_About" class="section desc">
                 Hi, my name is Alissa and I'm a very shy 21 year old girl 🏳️‍⚧️ from the UK. :3<br/><br/>
                 Currently studying Game/Game engine development.<br/><br/>
@@ -77,28 +77,29 @@
                 <br/><br/>
 
                 <b>Other:</b>
-                <br/><b>» Keyboard:</b> Corsair K95 RGB Platinum
-                <br/><b>» Mouse:</b> Razer Deathadder V2
+                <br/><b>» Keyboard:</b> Corsair K95 RGB Platinum & Ghost K1 - Belle Delphine Edition
+                <br/><b>» Mouse:</b> Razer Deathadder V2 & Ghost M1 - Belle Delphine Edition
                 <br/><b>» Audio:</b> Razer Kraken
             </p>
-            <a class="section next" href="#bdImage">NEXT</a>
+            <a class="section next" href="#Please">NEXT</a>
             <div class="arrow section pcSpecs"></div>
         </div>
 
-        <div class="section_main" id="bdImage">
-            <div class="section_backgroud bdImage"></div>
-            <img class="section_movingImage" id="left_bdImage" src="images/VS_purpleSaturn.png">
-            <img class="section_movingImage"  id="right_bdImage" src="images/VW_hearts.png">
+        <div class="section_main" id="Please">
+            <div class="section_backgroud Please"></div>
+            <img class="section_movingImage" id="left_Please" src="images/Chains.png">
+            <img class="section_movingImage"  id="right_Please" src="images/VW_hearts.png">
             <h2 class="section title"><3</h2>
             <div class="section_tags">
-                <p class="section_tag pink">Cutie</p>
+                <p class="section_tag pink">Please</p>
+                <p class="section_tag white">I'm begging</p>
             </div>
-            <img class="section bdayimage " src="images/alissaBirthday.jpg">
-            <p id="section_desc_bdImage" class="section desc">
-                An incredible drawing my friend Emily made for my birthday <3
+            <img class="section bdayimage " src="images/Kneeling.png">
+            <p id="section_desc_Please" class="section desc">
+                <img src="https://c.tenor.com/4OuG2hfJuuEAAAAC/cute-smile-anime-cunning.gif">
             </p>
             <a class="section next" href="#main">TOP</a>
-            <div class="arrow section bdImage"></div>
+            <div class="arrow section Please"></div>
         </div>
 
         <footer>
